<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/alert_background"
    android:orientation="vertical"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dip" >

        <Button
            android:id="@+id/post_article"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/alert_button"
            android:text="@string/post"
            android:textSize="18dip" />

        <Button
            android:id="@+id/add2_fav"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/alert_button"
            android:text="@string/collect"
            android:textSize="18dip" />

        <Button
            android:id="@+id/pre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/alert_button"
            android:text="@string/last_page"
            android:textSize="18dip" />

        <Button
            android:id="@+id/next"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/alert_button"
            android:text="@string/next_page"
            android:textSize="18dip" />
        
          <Button
            android:id="@+id/refresh"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:textSize="18dip"
            android:background="@drawable/alert_button"
            android:text="@string/refresh" />
        
    </LinearLayout>

</RelativeLayout>