<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/day"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/title_background" >

        <Button
            android:id="@+id/about_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/title_button_back"
            android:minWidth="75dip"
            android:text="@string/back"
            android:textColor="@android:color/background_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/about"
            android:textSize="25dip" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
"

        <ImageView
            android:id="@+id/about_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dip"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dip"
            android:text="@string/lily"
            android:textColor="@android:color/background_dark"
            android:textSize="20dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/about_email"
            android:layout_centerHorizontal="true"
            android:text="@string/myinfo"
            android:textColor="#a5a7a5" />

        <TextView
            android:id="@+id/about_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="10dip"
            android:text="@string/myemail"
            android:textColor="#a5a7a5" />
    </RelativeLayout>

</LinearLayout>