<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/day"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/title_background" >

        <Button
            android:id="@+id/login_exit"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/title_button_back"
            android:minWidth="75dip"
            android:text="@string/quit"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/login_submit"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/title_button"
            android:minWidth="75dip"
            android:text="@string/login"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <EditText
        android:id="@+id/login_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="25dip"
        android:hint="@string/login_hint" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="13dip"
        android:hint="@string/password"
        android:password="true" />

</LinearLayout>