<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/day" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/tab_background"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingBottom="2.0dip"
            android:paddingTop="5.0dip" >

            <RadioButton
                android:id="@+id/top"
                style="@style/MainTabButton"
                android:checked="true"
                android:drawableTop="@drawable/tab_top"
                android:text="@string/top_short" />

            <RadioButton
                android:id="@+id/board"
                style="@style/MainTabButton"
                android:drawableTop="@drawable/tab_board"
                android:text="@string/board" />

            <RadioButton
                android:id="@+id/hot"
                style="@style/MainTabButton"
                android:drawableTop="@drawable/tab_hot"
                android:text="@string/hot" />


            <RadioButton
                android:id="@+id/settings"
                style="@style/MainTabButton"
                android:drawableTop="@drawable/tab_set"
                android:text="@string/set" />
        </RadioGroup>
    </LinearLayout>

</TabHost>