<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/day"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/title_background" >

        <Button
            android:id="@+id/block_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/title_button_back"
            android:minWidth="75dip"
            android:text="@string/back"
            android:textColor="@android:color/background_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/black"
            android:textSize="25dip" />
    </RelativeLayout>

    <LinearLayout
        android:padding="10dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_background"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/block_edit"
            android:inputType="text"
            android:hint="@string/input_username"
            android:layout_weight="0.8"
            android:background="@drawable/edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
        <Button
            android:id="@+id/block_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="0.1"
            android:text="@string/add"
            android:background="@drawable/alert_button" 
            />
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:cacheColorHint="#00000000"
        android:fastScrollEnabled="true"
        android:scrollbars="vertical" />

</LinearLayout>