<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/title_background" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/set"
            android:textSize="25dip" />
    </RelativeLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginBottom="5dip"
                android:background="@drawable/white_background"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/set_acc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/set_relative_background"
                    android:padding="8dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/switch_user"
                        android:textColor="@android:color/background_dark"
                        android:textSize="16dip" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/arrow" />
                </RelativeLayout>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="@drawable/grey_dot" />

                <RelativeLayout
                    android:id="@+id/set_sign"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/set_relative_background"
                    android:padding="8dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/sign"
                        android:textColor="@android:color/background_dark"
                        android:textSize="16dip" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/arrow" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/white_background"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/set_block"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/set_relative_background"
                    android:padding="8dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/manage_black"
                        android:textColor="@android:color/background_dark"
                        android:textSize="16dip" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/arrow" />
                </RelativeLayout>
                
                 <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="@drawable/grey_dot" />
                 
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/set_relative_background"
                    android:padding="8dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/set_autoLogin"
                        android:text="@string/login_when_start"
                        android:textColor="@android:color/background_dark"
                        android:textSize="16dip" />

                    <ToggleButton
                        android:id="@+id/set_autoLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/switcher"
                        android:textOff=""
                        android:textOn="" />
                </RelativeLayout>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="@drawable/grey_dot" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/set_relative_background"
                    android:padding="8dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/set_autoLogin"
                        android:text="@string/reply_send_mail"
                        android:textColor="@android:color/background_dark"
                        android:textSize="16dip" />

                    <ToggleButton
                        android:id="@+id/set_reply_mail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/switcher"
                        android:textOff=""
                        android:textOn="" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/white_background"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/set_about"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/set_relative_background"
                    android:padding="8dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/about"
                        android:textColor="@android:color/background_dark"
                        android:textSize="16dip" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/arrow" />
                </RelativeLayout>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="@drawable/grey_dot" />

                <RelativeLayout
                    android:id="@+id/set_check_update"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/set_relative_background"
                    android:padding="8dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/check_update"
                        android:textColor="@android:color/background_dark"
                        android:textSize="16dip" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/arrow" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/white_background"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/set_relative_background"
                    android:padding="8dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/set_showPic"
                        android:text="@string/load_pic"
                        android:textColor="@android:color/background_dark"
                        android:textSize="16dip" />

                    <ToggleButton
                        android:id="@+id/set_showPic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/switcher"
                        android:textOff=""
                        android:textOn="" />
                </RelativeLayout>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="@drawable/grey_dot" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/set_relative_background"
                    android:padding="8dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/set_savPic"
                        android:text="@string/save_pic"
                        android:textColor="@android:color/background_dark"
                        android:textSize="16dip" />

                    <ToggleButton
                        android:id="@+id/set_savPic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/switcher"
                        android:textOff=""
                        android:textOn="" />
                </RelativeLayout>
            </LinearLayout>

            <Button
                android:id="@+id/set_delete_pic"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginBottom="10dip"
                android:background="@drawable/set_button"
                android:text="@string/delete_pic"
                android:textSize="16dip" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>